--- a/Laatikkopeli/pom.xml
+++ b/Laatikkopeli/pom.xml
@@ -29,6 +29,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.39.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.6.0</version>
