viikko 7: testikattavuutta parannettu

--- a/Laatikkopeli/pom.xml
+++ b/Laatikkopeli/pom.xml
@@ -117,6 +117,9 @@
                 <configuration>
                     <excludes>
                         <exclude>/laatikkopeli/controllers/**</exclude>
+                        <exclude>/laatikkopeli/domain/GameArea*.*</exclude>
+                        <exclude>/laatikkopeli/domain/Image*.*</exclude>
+                        <exclude>/laatikkopeli/domain/GameRun*.*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
