--- a/Laatikkopeli/pom.xml
+++ b/Laatikkopeli/pom.xml
@@ -120,6 +120,7 @@
                         <exclude>/laatikkopeli/domain/GameArea*.*</exclude>
                         <exclude>/laatikkopeli/domain/Image*.*</exclude>
                         <exclude>/laatikkopeli/domain/GameRun*.*</exclude>
+                        <exclude>/laatikkopeli/domain/Timer*.*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
