--- a/Laatikkopeli/pom.xml
+++ b/Laatikkopeli/pom.xml
@@ -51,6 +51,11 @@
             <version>5.6.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
     
     <build>
